# ECO2DOE

./: .gitignore  design.toml  prek.toml  pyproject.toml
src/eco2doe/: batch_report.py  design.py  edit.py
tpl/: cases.parquet  cases.xlsx
