[project]
name            = "eco2doe"
version         = "0.1.0"
description     = "ECO2DOE"
readme          = "README.md"
requires-python = ">=3.14"
authors         = [{ name = "beskep", email = "beskep@naver.com" }]
dependencies    = [
  "chardet>=7.4.3",
  "colorama>=0.4.6",
  "eco2",
  "fastexcel>=0.19.0",
  "more-itertools>=10.8.0",
  "polars>=1.38.1",
  "structlog>=25.5.0",
  "xlsxwriter>=3.2.9",
]

[project.scripts]
eco2doe = "eco2doe:app"

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.5", "ty>=0.0.21", "types-lxml>=2026.2.16"]

[build-system]
requires      = ["uv_build>=0.10.8,<0.12.0"]
build-backend = "uv_build"

[tool.mypy]
disable_error_code  = ["import-untyped", "var-annotated"]
check_untyped_defs  = true
warn_unused_ignores = true
warn_unused_configs = true

[tool.ruff]
preview           = true
respect-gitignore = false
output-format     = "concise"

[tool.ruff.format]
quote-style           = "single"
docstring-code-format = true

[tool.ruff.lint]
select             = ["ALL"]
ignore             = ["ANN", "COM812", "CPY", "D", "FIX", "Q", "S", "TD"]
future-annotations = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
line-width                      = 120
trailing-comment-alignment      = true

[tool.ty.terminal]
output-format = "concise"

[tool.uv.sources]
eco2 = { git = "https://github.com/beskep/ECO2" }
